# List-of-the-movie

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yaml
list-of-the-movies/: .coveragerc  main.py  manage.py  stuf.py
list-of-the-movies/api/: app_lifespan.py  main_views.py
list-of-the-movies/api/api_v1/: __init__.py
list-of-the-movies/api/api_v1/service/auth/: abstract_tokens_wrapper.py  abstract_users_wrapper.py
list-of-the-movies/api/api_v1/service/auth/redis_auth/: __init__.py  redis_config.py  redis_tokens.py  redis_users.py
list-of-the-movies/api/api_v1/views/: __init__.py  detail_views.py  film_views.py  get_film_views.py  list_views.py
list-of-the-movies/commands/: __init__.py  cli.py  hello.py  tokens.py
list-of-the-movies/crud/: crud.py
list-of-the-movies/db/: 11movies.json  movies.json
list-of-the-movies/db/redis_db/: redis_config.py  redis_tokens.py  redis_tokens_wrapper.py
list-of-the-movies/dependencies/: api_token_required.py  auth_required.py  prefetch_movie.py  storage_save_state_background.py
list-of-the-movies/schemas/: movies_schema.py
list-of-the-movies/services/: const.py  logger.py  redis_config.py  tools.py
list-of-the-movies/testing/: conftest.py
list-of-the-movies/testing/test_api/: conftest.py  test_main_views.py
list-of-the-movies/testing/test_api/test_api_v1/test_service/test_auth/test_redis_auth/: test_redis_token_helper.py
list-of-the-movies/testing/test_api/test_api_v1/test_views/: test_movie_create.py  test_movie_delete.py
list-of-the-movies/testing/test_api/test_api_v1/test_views/test_detail_views/: test_movie_delete.py  test_movie_partial_update.py  test_movie_update.py  test_transfer.py
list-of-the-movies/testing/test_crud/: test_crud.py
list-of-the-movies/testing/test_schemas/: test_movie.py  test_user_schemas.py
list-of-the-movies/testing/test_tools/: test_const.py
list-of-the-movies/tools/: const.py  logger.py  redis_config.py
