[project]
name = "list-of-the-movie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "redis[hiredis]>=6.0.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
    "uvicorn<=0.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
]
